tests/NormalTests/paczka1/small_fuzzy/12508129.err
Error in line 5: DcKpRcH A616 18,2
Error in line 1: A616 A598 10,1
Error in line 8: GX0na A598 66,2
Error in line 12: GX0na A616 8,0
